# Yellow_belt

./: .gitignore  CMakeLists.txt  FindMaxRepetitionCount.cpp  GetDistinctRootCount_.cpp  averige_temperature.cpp  block_mass.cpp  decompose.cpp  decompose_orig.cpp  element_link.cpp  element_link_original.cpp  errors.txt  iterators.cpp  main.cpp  matrix_sum.cpp  root_count.h  sqr_orig.cpp  starter.cpp  task_tracker.cpp  task_tracker_origin.cpp  template_function.cpp  test-equation.cpp  test_person.cpp  test_runner.h  tests.h  unit_test_.cpp
Figures/: main.cpp  solution.cpp
GreaterElements/: main.cpp  solution.cpp
Notifier/: main.cpp
Parser/: lesson.cpp  main.cpp
Rectangle/: Rectangle.cpp  Rectangle.h
Refactoring/: main.cpp  test.cpp
brute_force/: main.cpp  solution.cpp
build_expression/: main.cpp  solution_1.cpp  solution_2.cpp  without_braces.cpp
closer_element/: main.cpp  solution.cpp
decompose_2/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
delete_dubbles/: delete_dubbles.cpp
demography/: main.cpp  my_solution.cpp
final/: condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  condition_parser_test.h  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_date.h  test_db.h  test_node.h  test_runner.h  wb_db.cpp
group_by_symbol/: group_by_symbol.cpp  main.cpp  solution_1.cpp  solution_2.cpp
inheritance/: main.cpp
merge_sort/: main.cpp  solution_1.cpp  solution_2.cpp
names_4/: main.cpp
palindrom/: main.cpp  test_runner.h
person/: main.cpp
phone_number/: main.cpp  phone_number.cpp  phone_number.h  solution.cpp
rational/: rational.cpp  solution.cpp  test_rational.cpp  test_runner.h
root_count/: main.cpp  root_count.cpp  root_count.h  test_runner.h  tests.cpp  tests.h
split_words/: main.cpp  solution.cpp
sum_reverse_sort/: sum_reverse_sort.cpp
synonyms/: main.cpp  synonims.cpp  synonyms.h  test.cpp  test.h  test_runner.cpp  test_runner.h
vector_part/: main.cpp
virtual_methods/: main.cpp
