cmake_minimum_required(VERSION 3.10)
project(yellow)

set(CMAKE_CXX_STANDARD 14)

#add_executable(yellow root_count/main.cpp root_count/root_count.cpp root_count/test_runner.h root_count/tests.h root_count/tests.cpp)
#add_executable(yellow synonyms/synonims.cpp synonyms/test.h synonyms/test_runner.h synonyms/synonyms.h synonyms/main.cpp synonyms/test_runner.cpp synonyms/test.cpp)
#add_executable(yellow person/main.cpp person/test_runner.h)
#add_executable(yellow sum_reverse_sort/sum_reverse_sort.cpp sum_reverse_sort/sum_reverse_sort.h)
#add_executable(yellow phone_number/phone_number.cpp phone_number/phone_number.h phone_number/main.cpp phone_number/solution.cpp)
#add_executable(yellow rational/rational.cpp rational/test_runner.h)
#add_executable(yellow palindrom/main.cpp palindrom/test_runner.h)
#add_executable(yellow Rectangle/Rectangle.cpp Rectangle/Rectangle.h)
#add_executable(yellow decompose_2/main.cpp decompose_2/query.cpp decompose_2/query.h decompose_2/responses.cpp decompose_2/responses.h decompose_2/bus_manager.cpp decompose_2/bus_manager.h)
#add_executable(yellow split_words/main.cpp)
#add_executable(yellow delete_dubbles/delete_dubbles.cpp)
#add_executable(yellow brute_force/main.cpp)
#add_executable(yellow demography/main.cpp)
#add_executable(yellow merge_sort/main.cpp)
#add_executable(yellow closer_element/main.cpp)
#add_executable(yellow names_4/main.cpp)
#add_executable(yellow group_by_symbol/main.cpp)
#add_executable(yellow build_expression/main.cpp)
#add_executable(yellow build_expression/without_braces.cpp)
#add_executable(yellow main.cpp)
#add_executable(yellow inheritance/main.cpp)
#add_executable(yellow Parser/main.cpp)
#add_executable(yellow Parser/lesson.cpp)
add_executable(yellow final/main.cpp final/date.cpp final/date.h final/database.cpp final/database.h final/test_runner.h final/condition_parser.h final/condition_parser.cpp final/node.h final/node.cpp final/token.h final/token.cpp)